# codex_usage_insights

./: .gitignore  README.md  pyproject.toml
apps/macos/: Package.resolved  Package.swift
apps/macos/.build/: build.db  debug.yaml  workspace-state.json
apps/macos/.build/arm64-apple-macosx/debug/: CodexUsageInsightsApp  description.json
apps/macos/.build/repositories/swift-syntax-e1f983d3/: packed-refs
apps/macos/.build/repositories/swift-testing-f02b8e0f/: packed-refs
apps/macos/Sources/CodexUsageInsightsApp/App/: AppModel.swift  CodexUsageInsightsApp.swift  WorkspaceRootView.swift
apps/macos/Sources/CodexUsageInsightsApp/UIComponents/: MetricTileView.swift
apps/macos/Tests/CodexUsageInsightsAppTests/: InMemoryAnalyticsRepositoryTests.swift  LogImportServiceTests.swift
codex_usage_analytics/: __init__.py  aggregation.py  cli.py  models.py  parser.py  pricing.py  pricing_profiles.json  reporting.py
examples/: custom-pricing-profiles.json
openspec/changes/add-codex-usage-analytics/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-codex-usage-analytics/specs/codex-usage-analytics/: spec.md
openspec/changes/add-macos-native-usage-insights-app/: design.md  proposal.md  tasks.md
tests/: helpers.py  test_cli.py  test_parser.py  test_pricing.py  test_reporting.py
tests/fixtures/sessions/: session_missing_usage.jsonl  session_rate_limit_only.jsonl  session_timezone_boundary.jsonl  session_usage_after_midnight_local.jsonl  session_with_growth.jsonl  session_with_invalid_tail.jsonl
(+872 files in other folders)
